--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -28,6 +28,11 @@
     &__left {
         width: 33.333333%;
         display: table-cell;
+
+        @include respond(tab-port) {
+            display: none;
+
+        }
     }
 
     &__right {
@@ -58,6 +63,11 @@
         -ms-hyphens: auto;
         -webkit-hyphens: auto;
         hyphens: auto;
+
+        @include respond(tab-port) {
+            font-size: 1.2rem;
+            margin-bottom: 3rem;
+        }
     }
     //OPEN STATES
     &:target {
